# chibia

./: Cargo.toml  LICENSE.md  README.md
src/: args.rs  cmds.rs  db.rs  main.rs  style.rs  utils.rs
src/args/: chars_args.rs  hunts.rs
src/chars/: args.rs  cmds.rs  mod.rs  utils.rs
src/cmds/: chars_cmd.rs
src/hunts/: args.rs  cmds.rs  mod.rs  parse.rs  utils.rs
