[package]
name = "chibia"
version = "0.1.0"
edition = "2024"
authors = ["Brian C. Ferrari <ferraribrian1996@gmail.com>"]
description = "A CLI for keeping track of Tibia hunting data"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
